# lumi-ui

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/server/: .env.example  .gitignore  LANGCHAIN_BOOTSTRAP.md  README.md  README_TESTING.md  main.py  nbt.py  package.json  pyproject.toml  setup_test.py  test_config_example.hjson  test_gpt5.py  test_standalone.py  test_unified_inference.py  test_unified_simple.py
apps/server/api/: __init__.py  ai_router.py  models.py
apps/server/config/: README.md  __init__.py  api.py  filesystem.py  inference_models.py  loader.py  models.py  state_manager.py  validator.py
apps/server/docs/: IMPLEMENTATION_SUCCESS.md  config-example.hjson  image-generation-implementation.md  image-testing-guide.md  implementation-summary.md  inference-infrastructure-design.md  inference-migration-plan.md  langchain-integration.md  langchain-removal-plan.md  sdk-removal-complete.md  testing-guide.md
apps/server/examples/: langchain_examples.py
apps/server/services/: __init__.py  langchain_service.py
apps/server/services/inference/: __init__.py  base.py  compatibility.py  factory.py  image_validation.py  models.py  registry.py  resolver.py  service.py
apps/server/tests/: README.md  test_api_integration.py  test_enabled_flag_removal.py  test_image_generation_multi_turn.py  test_langchain_service.py  test_multi_turn_chat.py  test_provider_messages.py
apps/server/tests/integration/: test_image_api_integration.py
apps/server/tests/manual/: test_debug_image.py  test_gpt5.py  test_img.py  test_minimal_image.py  (+3 more)
(+18 files in other folders)
